[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-mjml"
dynamic = ["version"]
description = "Use MJML in Django templates"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "django",
  "mjml",
  "django-mjml",
  "email",
  "layout",
  "template",
  "templatetag",
]
authors = [
  { name = "Igor Melnyk" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "django >=4.2.8,<5.2",
]

[project.optional-dependencies]
requests = [ "requests >=2.30" ]

[project.urls]
Documentation = "https://github.com/liminspace/django-mjml#readme"
Issues = "https://github.com/liminspace/django-mjml/issues"
Source = "https://github.com/liminspace/django-mjml"

[tool.hatch.version]
path = "mjml/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mjml"]

[tool.hatch.build.targets.sdist]
include = [
  "mjml/**/*.py",
  "CHANGELOG.md",
  "LICENSE",
  "README.rst",
]

[tool.coverage.run]
source = ["mjml/", "tests/"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.bandit]
skips = ["B105", "B404", "B603", "B607"]

[tool.ruff]
target-version = "py38"
line-length = 118

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "BLE",  # flake8-blind-except
  "C4",  # flake8-comprehensions
  "A",  # flake8-builtins
  "COM",  # flake8-commas
  "DJ",  # flake8-django
  "S",  # flake8-bandit
  "EM",  # flake8-errmsg
  "FA",  # flake8-future-annotations
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "G",  # flake8-logging-format
  "PIE",  # flake8-pie
  "PYI",  # flake8-pyi
  "Q",  # flake8-quotes
  "RSE",  # flake8-raise
  "RET",  # flake8-return
  "TID",  # flake8-tidy-imports
  "TCH",  # flake8-type-checking
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "TD",  # flake8-todos
  "FLY",  # flynt
  "PERF",  # Perflint
  "UP",  # pyupgrade
  "C90",  # mccabe
]
ignore = [
  "S105",
  "S603",
  "S607",
  "TD003",
  "TD002",
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 10
